enable-preview no longer needed