@@ -286,10 +286,6 @@ public class DynComp {
     cmdlist.add("java");
     // cmdlist.add ("-verbose:class");
 
-    // Temporary until JDK 24 is offically released.
-    if (BcelUtil.javaVersion == 24) {
-      cmdlist.add("--enable-preview");
-    }
     cmdlist.add("-cp");
     cmdlist.add(cp);
     cmdlist.add("-ea");
